# anilist-discord-hook

./: .gitignore  Cargo.toml  Dockerfile
.sqlx/: query-4f569a63753f3c40df4338f17b533e4e39f2531fbacd1a818a47d2df90469ca5.json  query-c09bff92b3a9efb536521549da1a95013ad6203cccad64199c1ffc4e76ac00bd.json
migrations/: 20250202135639_initial.sql
src/: anilist.rs  config.rs  datastore.rs  discord.rs  main.rs
