[package]
name = "anilist-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_flat_path = "0.2.0"
serde_json = "1.0.138"
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx-native-tls"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "time"] }
